Changed U to V in potentials, need to check for problems in numerics section.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.8 2009/07/29 20:12:37 ith Exp $
+% $Id: ihmacros.sty,v 1.9 2009/08/26 13:02:55 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -31,10 +31,10 @@
 \newcommand{\dpone}{\ensuremath{\dphi_{1}}}
 \newcommand{\dptwo}{\ensuremath{\dphi_{2}}}
 % 
-\newcommand{\U}{\ensuremath{U_{0}}}
-\newcommand{\Uphi}{\ensuremath{U_{,\varphi}}}
-\newcommand{\Upp}{\ensuremath{U_{,\varphi\varphi}}}
-\newcommand{\Uppp}{\ensuremath{U_{,\varphi\varphi\varphi}}}
+\newcommand{\U}{\ensuremath{V_{0}}}
+\newcommand{\Uphi}{\ensuremath{V_{,\varphi}}}
+\newcommand{\Upp}{\ensuremath{V_{,\varphi\varphi}}}
+\newcommand{\Uppp}{\ensuremath{V_{,\varphi\varphi\varphi}}}
 % 
 % 
 \newcommand{\Mpl}{\ensuremath{M_{\mathrm{PL}}}}
