Added a few more macros.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.9 2009/08/26 13:02:55 ith Exp $
+% $Id: ihmacros.sty,v 1.10 2009/08/26 17:41:44 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -73,6 +73,7 @@
 \newcommand{\phisq}{\frac{1}{2}\dot{\phi}^2}
 \newcommand{\YAdS}{Y_{\mathrm{AdS}}}
 \newcommand{\delN}{\Delta \mathcal{N}_*}
+\renewcommand{\Pr}{\ensuremath{\mathcal{P}_{\mathcal{R}}^2 }}
 \newcommand{\Ps}{\mathcal{P}_S^2}
 \newcommand{\Pt}{\mathcal{P}_T^2}
 
@@ -111,6 +112,7 @@
 \newcommand{\kvi}{\ensuremath{k^i}}
 \newcommand{\qvi}{\ensuremath{q^i}}
 \newcommand{\pvi}{\ensuremath{p^i}}
+\newcommand{\kb}{\textbf{k}}
 % % % % % % % % % % % % 
 % Equation referencing
 \newcommand{\eq}[1]{Eq.~(\ref{#1})}
