Add minor paragraph

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.26 2009/08/26 18:15:22 ith Exp $
+% $Id: mainintro.tex,v 1.27 2009/08/27 10:35:22 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.26 2009/08/26 18:15:22 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.27 2009/08/27 10:35:22 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -718,8 +718,15 @@ and
 \begin{equation}
 [\hat{a}(\kb), \hat{a}(\kb')] = 0\,.
 \end{equation}
+% 
+These operators act on quantum states by adding or removing particles. They
+act on the zero particle vacuum as
+% 
+\begin{equation}
+ \hat{a}\dagger|0> = |0>\,,\quad \hat{a}|0> = 0\,.
+\end{equation}
 
-
+The choice of vacuum state is not straightforward in the FRW background. 
 
 
 Discuss vacuum selection and bunch davies vacuum.
